# cybermind

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_dashboard.ps1  streamlit_app.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  cve_ingest.yml
configs/: logging_config.py  settings.py
data/gold/: faiss_chunks.json  faiss_index  mitre_threats_enriched.json
data/gold/models/: threat_classifier.pkl
data/silver/: mitre_threats_normalized.json
dbt/cybermind_dbt/: create_models.py  create_schema.py  dbt_project.yml
scripts/: seed_embeddings.py  train_threat_classifier.py
src/backend/: main.py
src/backend/database/: db_models.py  engine.py
src/backend/middleware/: auth.py  request_logger.py
src/backend/models/: alert.py  entity.py  playbook.py  threat.py
src/backend/routers/: __init__.py  alerts.py  analytics.py  classifier.py  cves.py  entities.py  health.py  intel.py  ioc.py  playbooks.py  threats.py
src/backend/services/: cve_service.py  embedding_service.py  ioc_service.py  llm_service.py  mitre_loader.py  rag_service.py  scheduler.py  threat_scoring.py
src/dashboard/: app.py
src/dashboard/tabs/: alerts.py  analytics.py  cve_intel.py  entity_graph.py  overview.py  (+2 more)
src/pipeline/: build_vector_store.py  ingest_cve.py  ingest_mitre.py  transform_threats.py
tests/: test_analytics.py  test_api.py  test_cve_service.py  test_database.py  test_pipeline.py  test_playbooks.py  test_rag.py  test_threats.py
(+17 files in other folders)
